<resources>
    <string name="app_name">一里递</string>
    <string name="http_exception">系统发生异常，请稍后重试</string>
    <string name="http_failure">数据请求失败，请联系管理员或稍后重试</string>
    <string name="http_time_out">请求超时，请检查您的网络状况</string>
    <string name="http_network">网络出现异常，请选择较好的网络环境</string>
    <string name="http_own_response">您的请求被劫持，请检查系统是否中毒或重新下载官方最新客户端</string>
    <string name="double_exit_notify">再按一次，退出应用</string>
    <string name="please_choose_community_id">请先选择所在小区店铺</string>
    <string name="money_flag">¥</string>
    <string name="pull_up_no_more_data">已经没有更多数据了</string>
    <string name="common_dialog_title">温馨提示</string>
    <string name="three_dialog_title">请选择</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确认</string>
    <string name="cart_item_notify">最快30分钟送达，满20免运费</string>
    <string name="cart_item_send_free">最快30分钟送达，满%1$s免运费</string>
    <string name="no_finish">功能暂未开放，敬请期待！</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="customer_service_line">4001&#8211;333&#8211;866</string>
    <string name="guide_button">立即体验</string>
    <string name="product_has_enough_stock">亲，该产品没有足够的库存了，店家正在积极备货当中，请耐心等待</string>
    <string name="product_has_limit_count">亲，该产品已经限制了购买%1$s件，请查看您的购物车</string>
    <string name="store_status_pause">亲，该店铺已经暂停营业了\n已经无法购买商品了</string>
    <string name="red_envelopes">活动暂未开启，敬请期待！</string>
    <string name="home_tab_name">首页</string>
    <string name="classification_tab_name">分类</string>
    <string name="cart_tab_name">购物车</string>
    <string name="order_tab_name">订单</string>
    <string name="profile_tab_name">我的</string>
    <string name="home_store_other">附近其它社区店</string>
    <string name="home_empty_text1">敬请期待&#8230;</string>
    <string name="home_empty_text2">本区域暂无门店，我们正在加紧拓展，抱歉给您带来的不便！</string>
    <string name="home_empty_text3">如有疑问请联系客服：</string>
    <string name="home_empty_text4">4001&#8211;333&#8211;866</string>
    <string name="find_more">查看更多</string>
    <string name="find_more_num">共有%1$s件</string>
    <string name="home_dialog_content">系统检测到您的当前位置发生了变化，是否切换位置？</string>
    <string name="home_dialog_location_change">此区域不在当前店铺配送范围，是否切换店铺？</string>
    <string name="home_dialog_location_clear_cart">此区域不在当前店铺配送范围，店铺切换以后购物车数据会被清空，是否切换店铺？</string>
    <string name="home_dialog_location_no_store">此区域暂无门店，我们正在加紧开通该区域的店铺，您是否还需要切换店铺？</string>
    <string name="home_dialog_location_no_store_clear_cart">此区域暂无门店，我们正在加紧开通该区域的店铺，店铺切换以后购物车数据会被清空，您是否还需要切换店铺？</string>
    <string name="home_dialog_upgrade">VIP商品需要单独购买,不能与其它商品同时购买,是否继续购买？</string>
    <string name="home_dialog_cart_content">当前地址不在配送范围内,是否切换到当前对应的店铺？</string>
    <string name="home_dialog_confirm">切换</string>
    <string name="home_dialog_store_confirm">确定</string>
    <string name="home_location_empty">请选择您所在的社区</string>
    <string name="home_store_distance">距离%1$s米</string>
    <string name="home_more">+更多</string>
    <string name="home_special_toast">特价商品一次只能购买一件</string>
    <string name="home_store_name">自提门店:%1$s</string>
    <string name="home_dialog_location_toke_clear_cart">购买此店铺商品需要自提，同时购物车数据会被清空，是否切换店铺？</string>
    <string name="home_dialog_location_toke_change">购买此店铺商品需要自提，是否切换店铺？</string>
    <string name="home_advert_seckill_title">天天秒杀</string>
    <string name="home_advert_seckill_des">专治剁手癌</string>
    <string name="home_advert_seckill_time_default">00</string>
    <string name="home_tool_bar_scan">扫一扫</string>
    <string name="classification">分类</string>
    <string name="coupon_title">我的券包</string>
    <string name="confirm_cart_title">订单结算</string>
    <string name="product">商品信息</string>
    <string name="product_detail">商品详情</string>
    <string name="account">我的欧币</string>
    <string name="product_evaluation">商品评价</string>
    <string name="store_evaluation">店铺评价</string>
    <string name="account_create">关联欧品屋商场账号</string>
    <string name="account_detail">交易详情</string>
    <string name="member_zone">会员福利专区</string>
    <string name="order_list">订单列表</string>
    <string name="order_mine">我的订单</string>
    <string name="instant_kill">天天疯抢</string>
    <string name="search_hint_text">请输入需要搜索的关键字</string>
    <string name="search_location_hint_text">请输入小区、写字楼、街道</string>
    <string name="search_product_hint_text">搜索附近商品</string>
    <string name="search_hot_keyword">热门搜索</string>
    <string name="search_history_keyword">最近搜索</string>
    <string name="search_history_clear">清除搜索历史</string>
    <string name="search_location_text">点击定位当前地点</string>
    <string name="search_address_btn">常用收货地址</string>
    <string name="search_manage_address_btn">管理地址</string>
    <string name="search_location_result_text">您是不是要找</string>
    <string name="search_location_nearby_text">附近位置</string>
    <string name="search_location_empty_notify">请输入正确的搜索关键字~</string>
    <string name="search_history_empty">暂无搜索历史记录</string>
    <string name="search">搜索</string>
    <string name="search_select_hint">请选择</string>
    <string name="search_error_notify">亲，请不要使用特殊字符进行搜索，否则我们无法识别</string>
    <string name="search_history_text">历史搜索记录</string>
    <string name="search_location_address_empty">此地址不在配送范围内,请选择其他地址</string>
    <string name="search_cancel">取消</string>
    <string name="search_title_product">商品</string>
    <string name="search_title_brand">品牌</string>
    <string name="evaluation_evalution">评价：</string>
    <string name="evaluation_desc">描述相符</string>
    <string name="evaluation_text_hint">分享购买心得或使用体验</string>
    <string name="evaluation_residue">300</string>
    <string name="evaluation_confirm">发表点评</string>
    <string name="evaluation_success">评价提交成功</string>
    <string name="evaluation_commit">提交评价</string>
    <string name="evaluation_text_empty">请输入评价内容</string>
    <string name="evaluation_text_more">亲，您输入的评价太多啦，取消点呗</string>
    <string name="evaluation_order_text">服务评价</string>
    <string name="evaluation_order_coincide_text">商品描述相符：</string>
    <string name="evaluation_order_attitude_text">商家服务</string>
    <string name="evaluation_order_send_text">配送服务</string>
    <string name="evaluation_order_desc">满意请给5星</string>
    <string name="evaluation_anonymity_evaluation">匿名评价</string>
    <string name="evaluation_please_evalution_product_desc">请评价产品描述！</string>
    <string name="evaluation_please_evalution_store_service">请评价商家服务！</string>
    <string name="evaluation_please_evalution_delivery_speed">请评价配送速度！</string>
    <string name="evaluation_special_character">请不要输入特殊字符！</string>
    <string name="evaluation_dialog_content">您确定要放弃此次评价？</string>
    <string name="evaluation_title">评价内容</string>
    <string name="profile_purse">我的钱包</string>
    <string name="profile_coupon">我的券包</string>
    <string name="profile_message">我的消息</string>
    <string name="profile_account">我的欧币</string>
    <string name="profile_shopping">里米商城</string>
    <string name="profile_collect">商品收藏</string>
    <string name="profile_funs">粉丝专区</string>
    <string name="profile_share">分享有礼</string>
    <string name="profile_help">帮助中心</string>
    <string name="profile_tel">客服热线：4001&#8211;333&#8211;866</string>
    <string name="profile_tel_content">客服热线：</string>
    <string name="profile_primary_pwd">原密码：</string>
    <string name="profile_new_pwd">新密码：</string>
    <string name="profile_sure_pwd">确认密码：</string>
    <string name="profile_please_input_primary_pwd">请输入原密码</string>
    <string name="profile_please_set_new_login_pwd">6&#8211;16位字母、数字组成</string>
    <string name="profile_please_again_input">请再次输入新密码</string>
    <string name="profile_finish_set">完成设置</string>
    <string name="profile_my_join">我要加盟</string>
    <string name="profile_tip">建议</string>
    <string name="profile_breakdown">故障</string>
    <string name="profile_consult">咨询</string>
    <string name="profile_problem_title">亲,给点意见吧~</string>
    <string name="feedback_problem_desc">我们知道我们的业务还不成熟,还有许多需要改进的地方,我们需要您的吐槽来帮助我们发现问题...</string>
    <string name="feedback_text_count">%1$s/500</string>
    <string name="profile_problem_type">问题分类：</string>
    <string name="profile_submit">提交</string>
    <string name="profile_contact_me">联系我们：4001&#8211;333&#8211;866</string>
    <string name="profile_please_input_your_problem">请输入您遇到的问题！</string>
    <string name="profile_submit_success">提交成功！</string>
    <string name="profile_feedback_desc">亲，详细描述你遇到的问题，或您的建议~</string>
    <string name="profile_feedback_content">亲，内容还未填写~</string>
    <string name="profile_obi">欧币</string>
    <string name="profile_vouchar">代金券</string>
    <string name="profile_join_us_title">我要申请成为合伙人</string>
    <string name="profile_join_us_name">联系人(必填)</string>
    <string name="profile_join_us_mobile">联系人手机(必填)</string>
    <string name="profile_join_us_city">所在城市(必填)</string>
    <string name="profile_join_us_space">所在区域(必填)</string>
    <string name="profile_join_us_store">所在社区及店名</string>
    <string name="profile_join_us_qq">微信号/QQ号</string>
    <string name="profile_update_member">升级为VIP用户</string>
    <string name="profile_join">申请加盟合伙人</string>
    <string name="profile_vip">VIP用户</string>
    <string name="profile_common">普通会员</string>
    <string name="profile_member_notice">关于会员说明</string>
    <string name="profile_send_way">配送方式</string>
    <string name="profile_pay_way">支付方式</string>
    <string name="profile_expire_date">有效期至</string>
    <string name="profile_version_name">版本号：%1$s</string>
    <string name="profile_take_photo">拍照</string>
    <string name="profile_choose_photo">选择本地照片</string>
    <string name="profile_money">余额</string>
    <string name="profile_lm">里米</string>
    <string name="profile_coupon_text">优惠券</string>
    <string name="profile_voucher_text">抵用券</string>
    <string name="profile_physical_text">实物券</string>
    <string name="pay_request_exception">订单生成成功，但发起支付时出现异常，请稍后查看订单进行支付</string>
    <string name="message_new_flag">新消息</string>
    <string name="message_old_flag">已阅</string>
    <string name="message_empty">没有消息哦</string>
    <string name="message_coupon">优惠消息</string>
    <string name="message_refund">退款消息</string>
    <string name="message_activity">一里递活动</string>
    <string name="message_nearly_empty">暂无最新消息</string>
    <string name="message_activity_empty">暂无一里递活动</string>
    <string name="message_activity_end">当前活动已结束</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_mobile">手&#160;&#160;机&#160;&#160;号：</string>
    <string name="login_please_input_mobile">请输入您的手机号码</string>
    <string name="login_please_input_checkcode">请输入验证码</string>
    <string name="login_input_mobile">输入手机号</string>
    <string name="login_arrow_symbol">></string>
    <string name="login_read_agree">我已阅读并同意</string>
    <string name="login_yldbkd_agree">一里递社区用户协议</string>
    <string name="login_get_checkcode">获取验证码</string>
    <string name="login_checkcode">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="login_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="login_confirm_pwd">确定密码：</string>
    <string name="login_please_again_input_pwd">请再次输入新密码</string>
    <string name="login_input_pwd_desc">请输入密码(6&#8211;16位字母、数字组成)</string>
    <string name="login_set_pwd">设置密码</string>
    <string name="login_pwd_rule">由6&#8211;16位字母、数字组成</string>
    <string name="login_input_check_code">输入验证码</string>
    <string name="register_mobile">手&#160;&#160;机&#160;&#160;号：</string>
    <string name="register_checkcode">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="register_recommend_info">请输入邀请码/推荐码</string>
    <string name="register_success">注册</string>
    <string name="register_invite">我是被邀请来的</string>
    <string name="choose_pay_type">选择支付方式</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
</resources>