<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/main_tool_bar" />

    <include layout="@layout/divider_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_small_height"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.Normal.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/login_input_mobile" />

        <TextView
            style="@style/TextAppearance.Normal.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/login_arrow_symbol" />

        <TextView
            style="@style/TextAppearance.Normal.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/login_input_check_code" />

        <TextView
            style="@style/TextAppearance.Normal.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/login_arrow_symbol" />

        <TextView
            style="@style/TextAppearance.Normal.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_set_pwd" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:layout_marginTop="@dimen/login_margin_large"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/mobile_text"
            style="@style/TextAppearance.Normal"
            android:layout_width="@dimen/login_left_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/login_pwd" />

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_pwd"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/mobile_text"
            android:background="@drawable/transparent"
            android:ems="15"
            android:hint="@string/login_input_pwd_desc"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#dddddd">

            <requestFocus />
        </com.yldbkd.www.library.android.viewCustomer.ClearableEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:layout_marginTop="@dimen/login_margin_large"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/mobile_text1"
            style="@style/TextAppearance.Normal"
            android:layout_width="@dimen/login_left_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/login_confirm_pwd" />

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_confim_pwd"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/mobile_text1"
            android:background="@drawable/transparent"
            android:ems="15"
            android:hint="@string/login_please_again_input_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/lightText">

            <requestFocus />
        </com.yldbkd.www.library.android.viewCustomer.ClearableEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:layout_marginTop="@dimen/login_margin_more_large">

        <Button
            android:id="@+id/register_register"
            style="@style/TextAppearance.Normal.White"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_gray_white_selector"
            android:enabled="false"
            android:text="@string/login_register" />
    </RelativeLayout>

</LinearLayout>