<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/register_mobile"/>

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_mobile"
            style="@style/TextAppearance.Normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/normal_margin_lr"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:ems="15"
            android:hint="@string/login_please_input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/lightText">

        </com.yldbkd.www.library.android.viewCustomer.ClearableEditText>

        <Button
            android:id="@+id/send_register_checkcode"
            style="@style/TextAppearance.Normal.Red"
            android:layout_width="@dimen/button_small_width"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button_checkcode_bg"
            android:enabled="false"
            android:padding="@dimen/margin_small"
            android:text="@string/login_get_checkcode"/>

    </LinearLayout>

    <include layout="@layout/divider_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/register_checkcode_text"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/register_checkcode"/>

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_checkcode"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_margin_lr"
            android:layout_toRightOf="@id/register_checkcode_text"
            android:background="@drawable/transparent"
            android:ems="15"
            android:hint="@string/login_please_input_checkcode"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColorHint="@color/lightText"/>
    </RelativeLayout>

    <include layout="@layout/divider_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/register_password_text"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/register_password"/>

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_password"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_margin_lr"
            android:layout_toRightOf="@id/register_password_text"
            android:background="@drawable/transparent"
            android:ems="16"
            android:hint="@string/login_pwd_rule"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColorHint="@color/lightText"/>

        <CheckBox
            android:id="@+id/register_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_big"
            android:button="@drawable/visit_cbox_selector"
            android:checked="false"/>
    </RelativeLayout>

    <include layout="@layout/divider_layout"/>

    <LinearLayout
        android:id="@+id/ll_show_invite_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_invite"
            style="@style/TextAppearance.Normal.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:button="@drawable/checkbox_selector"
            android:checked="false"/>

        <TextView
            android:id="@+id/register_invite"
            style="@style/TextAppearance.Normal.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_checkbox_margin"
            android:text="@string/register_invite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_invite_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:layout_marginTop="@dimen/register_invite_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/register_recommend"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/register_invite_margin_bottom"
            android:background="@drawable/transparent"
            android:ems="15"
            android:hint="@string/register_recommend_info"
            android:singleLine="true"
            android:textColorHint="@color/lightText"/>

        <include layout="@layout/divider_layout"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_big_height"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:layout_marginTop="@dimen/login_btn_margin_top">

        <Button
            android:id="@+id/register_login"
            style="@style/TextAppearance.Normal.White"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_gray_selector"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/register_success"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin_lr"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_read_agree"/>

        <TextView
            style="@style/TextAppearance.Normal.Yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_yldbkd_agree"/>
    </LinearLayout>
</LinearLayout>