<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_style_alert_dialog_background"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_style_alert_dialog_special"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/choose_pay_type"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_style_alert_dialog_special"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/we_chat_pay"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_style_alert_dialog_special"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/ali_pay"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/dialog_cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>