<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <include layout="@layout/main_tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:layout_marginTop="@dimen/login_margin_large"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/mobile_text"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_mobile" />

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/checkcode_mobile"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toLeftOf="@+id/checkcode_get_code"
            android:layout_toRightOf="@+id/mobile_text"
            android:background="@drawable/transparent"
            android:inputType="phone"
            android:ems="15"
            android:hint="@string/login_please_input_mobile"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="11"
            android:textColorHint="@color/lightText" />

        <Button
            android:id="@+id/checkcode_get_code"
            style="@style/TextAppearance.Normal.Red"
            android:layout_width="@dimen/button_small_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button_checkcode_bg"
            android:enabled="false"
            android:padding="@dimen/margin_small"
            android:text="@string/login_get_checkcode" />
    </RelativeLayout>

    <include
        layout="@layout/divider_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/yzm_text"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_checkcode" />

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/checkcode_code"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/yzm_text"
            android:background="@drawable/transparent"
            android:inputType="number"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/login_please_input_checkcode"
            android:singleLine="true"
            android:textColorHint="@color/lightText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_big_height"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:layout_marginTop="@dimen/login_margin_more_large">

        <Button
            android:id="@+id/checcode_submit"
            style="@style/TextAppearance.Normal.Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_gray_selector"
            android:enabled="false"
            android:text="@string/login_login" />
    </RelativeLayout>

</LinearLayout>